APC;Fix layout issue

--- a/helpmate-hub/src/app/app.component.css
+++ b/helpmate-hub/src/app/app.component.css
@@ -1,13 +1,14 @@
 .column {
-  width: 50%;
   height: 100%;
   background-size: contain;
 }
 
 .column-left {
+  width: 70%;
   float: left;
 }
 
 .column-right {
+  width: 30%;
   float: right;
 }
